...


@Composable
@Preview(showBackground = true)
fun SearchTopBarPreview() {
    SearchTobBar(
        text = "Search",
        onTextChange = {},
        onSearchClicked = {},
        onCloseClicked = {}
        )
}
