...

import com.example.kbsc_cooperate.data.ExploreModel

typealias OnExploreItemClicked = (ExploreModel) -> Unit

enum class RooftopItem {
    ReservationList, Search, Like, MyProfile
}

/*@Composable
fun RooftopHome(
    widthSize: WindowWidthSizeClass,
    onExploreItemClicked: OnExploreItemClicked,
...
